Bug 515760 - "[faceted search]: attachment display is clipped" - fix css [r+ui-r=clarkbw a=blocking-thunderbird3]

--- a/mail/base/content/glodaFacetView.css
+++ b/mail/base/content/glodaFacetView.css
@@ -481,7 +481,7 @@ h3 {
   padding-left: 2em;
   text-align: right;
   max-width: 20em;
-  max-height: 5em;
+  max-height: 10em;
   overflow: hidden;
   color: #999;
   font-size: 90%;
